# fingerprintrs-wasm-js

./: .gitignore  Makefile  README.md  package-lock.json
collect_fingerprint-rs/: Cargo.toml
collect_fingerprint-rs/src/: lib.rs  structs.rs
public/: index.html  main.js
public/fingerprints/js_fp/: fingerprint_collector.js  fingerprintjs_collector.js
src/: cookieManager.js  server.js
